--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -12,7 +12,7 @@
 .brounded-sm
   border-radius: 8px !important
 
-.bg-color
+.bg
   &-1
     background-color: #E4FEFE
   &-2
@@ -37,8 +37,23 @@
   &-white
     background-color: #fff
 
+.-mt-50px
+  margin-top: -50px
+
 .border-top.color-primario
   border-top: 5px solid $color-primario !important
+
+.border-top-gris
+  border-top: 1px solid #707070 !important
+.border-bottom-gris
+  border-bottom: 1px solid #707070 !important
+.border-right-gris
+  border-right: 1px solid #707070 !important
+.border-left-gris
+  border-left: 1px solid #707070 !important
+
+.border-bottom-white
+  border-bottom: 1px solid #fff !important
 
 // Full Width Background
 .bg-full-width
@@ -133,13 +148,13 @@ $custom-card-img-height: 322px
   
 .border-top-9-azul
   border-top: 9px solid #1172B3
-.border-right-gris
-  border-right: 1px solid #707070 !important
 
 .bg-azul
   background-color: #E4FEFE
 .bg-azul-2
   background-color: #E8EEFD
+.bg-azul-claro
+  background-color: #CBFEFE
 
 .bg-amarillo
   background-color: #FFFBE8
@@ -153,6 +168,9 @@ $custom-card-img-height: 322px
 
 .bg-negro
   background-color: #250F33
+
+.bg-gris
+  background-color: #F3F3F3
 
 .bg-ppal-claro
   background-color: #F7F4ED
