--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -56,7 +56,7 @@ $color-institucional-terciario: #E6F0F6
 // Colores Curso ---------------------------------------
 
 $color-primario: #7F35AB
-$color-secundario: #F3CC96
+$color-secundario: #FFDD32
 $color-terciario: #5CFBD4
 $color-acento-contenido: #F8BC17
 $color-acento-botones: #7F35AB
